RESOLVED FIXED210700
Fix WebUserContentControllerProxy vs ContentWorld lifetime
https://bugs.webkit.org/show_bug.cgi?id=210700
Summary Fix WebUserContentControllerProxy vs ContentWorld lifetime
Brady Eidson
Reported 2020-04-18 15:03:55 PDT
UserContentControllerProxy / ContentWorld cleanup Blocking testing for https://bugs.webkit.org/show_bug.cgi?id=206398
Attachments
Patch (23.31 KB, patch)
2020-04-18 16:10 PDT, Brady Eidson
achristensen: review+
Patch for landing (23.29 KB, patch)
2020-04-18 18:47 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2020-04-18 15:46:41 PDT
Renaming - I realized there is an actual bug this refactoring is fixing, and wrote an API test for it "Fix WebUserContentControllerProxy vs ContentWorld lifetime"
Brady Eidson
Comment 2 2020-04-18 16:10:21 PDT
Alex Christensen
Comment 3 2020-04-18 17:36:38 PDT
Comment on attachment 396868 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396868&action=review > Source/WebKit/UIProcess/API/APIContentWorld.cpp:38 > + static HashMap<WTF::String, ContentWorld*>* sharedMap = new HashMap<WTF::String, ContentWorld*>; NeverDestroyed<HashMap<...>> to be consistent with below. > Source/WebKit/UIProcess/API/APIContentWorld.h:61 > + HashSet<WebKit::WebUserContentControllerProxy*> m_associatedContentControllerProxies; Could we use WeakPtr here instead of storing raw pointers?
Brady Eidson
Comment 4 2020-04-18 18:46:02 PDT
(In reply to Alex Christensen from comment #3) > Comment on attachment 396868 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=396868&action=review > > > Source/WebKit/UIProcess/API/APIContentWorld.cpp:38 > > + static HashMap<WTF::String, ContentWorld*>* sharedMap = new HashMap<WTF::String, ContentWorld*>; > > NeverDestroyed<HashMap<...>> to be consistent with below. Fixed > > Source/WebKit/UIProcess/API/APIContentWorld.h:61 > > + HashSet<WebKit::WebUserContentControllerProxy*> m_associatedContentControllerProxies; > > Could we use WeakPtr here instead of storing raw pointers? I'm wondering what the ramifications are of making an API::Object have WeakPtrs. I'm going to punt for now.
Brady Eidson
Comment 5 2020-04-18 18:47:59 PDT
Created attachment 396883 [details] Patch for landing
EWS
Comment 6 2020-04-18 19:08:56 PDT
Committed r260330: <https://trac.webkit.org/changeset/260330> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396883 [details].
Radar WebKit Bug Importer
Comment 7 2020-04-18 19:09:17 PDT
Note You need to log in before you can comment on or make changes to this bug.